--- a/templates/puppet.conf-common.erb
+++ b/templates/puppet.conf-common.erb
@@ -1,13 +1,13 @@
 [main]
-server                    = <%= puppet_server %>
-logdir                    = <%= puppet_logdir %>
-vardir                    = <%= puppet_vardir %>
-ssldir                    = <%= puppet_ssldir %>
+server                    = <%= @puppet_server %>
+logdir                    = <%= @puppet_logdir %>
+vardir                    = <%= @puppet_vardir %>
+ssldir                    = <%= @puppet_ssldir %>
 rundir                    = /var/run/puppet
 factpath                  = $vardir/lib/facter
 pluginsync                = true
 templatedir               = $confdir/templates
-<% if operatingsystem == "Ubuntu" %>
+<% if @operatingsystem == "Ubuntu" %>
 prerun_command            = /etc/puppet/etckeeper-commit-pre
 postrun_command           = /etc/puppet/etckeeper-commit-post
 <% end %>
