Changes to support puppet 3.6.2

--- a/templates/puppet.conf-master.erb
+++ b/templates/puppet.conf-master.erb
@@ -1,7 +1,7 @@
 
 [master]
-modulepath                = <%= @modulepath %>
-manifest                  = <%= @manifest %>
+environmentpath           = $confdir/environments
+basemodulepath            = $confdir/modules
 environment               = <%= @environment %>
 autosign                  = <%= @autosign %>
 ssl_client_header         = SSL_CLIENT_S_DN
