--- a/templates/puppet-server.conf.erb
+++ b/templates/puppet-server.conf.erb
@@ -1,13 +1,12 @@
 [main]
 server										= <%= @puppet_server %>
-modulepath								= /etc/puppet/modules/dist:/etc/puppet/modules/site
+basemodulepath            = $confdir/modules
 logdir										= /var/log/puppet
 vardir										= /var/lib/puppet
 ssldir										= /var/lib/puppet/ssl
 rundir										= /var/run/puppet
 factpath									= $vardir/lib/facter
 pluginsync								= true
-templatedir								= $confdir/templates
 prerun_command 						= /etc/puppet/etckeeper-commit-pre
 postrun_command 					=	/etc/puppet/etckeeper-commit-post
 
